# parco-xml

./: .gitignore  Cargo.toml
parco-xml/: Cargo.toml  README.md
parco-xml-macros/: Cargo.toml
parco-xml-macros/src/: lib.rs
parco-xml-macros/src/common/: is_lifetime.rs  mod.rs  out.rs  to_lit_str.rs
parco-xml-macros/src/dexml/: handler.rs  inits.rs  input.rs  mod.rs
parco-xml-macros/src/dexml/raw/: attr.rs  child.rs  element.rs  mod.rs
parco-xml-macros/src/dexml/visits/: attrs.rs  child.rs  element.rs  mod.rs  optimize.rs  visit.rs  visit_attrs.rs
parco-xml-macros/src/xml/: args.rs  handler.rs  input.rs  mod.rs
parco-xml-macros/src/xml/c14n/: attr.rs  child.rs  element.rs  mod.rs  ns_attrs.rs
parco-xml-macros/src/xml/fmtstr/: attr.rs  child.rs  element.rs  mod.rs  ns.rs  tag.rs
parco-xml-macros/src/xml/ns/: declared.rs  mod.rs  section.rs  try_lookup.rs  used_namespaces.rs
parco-xml-macros/src/xml/raw/: attr.rs  child.rs  element.rs  mod.rs  tag.rs
parco-xml-test/: Cargo.toml
parco-xml-test/src/: control_ser.rs  deser.rs  main.rs  ser.rs  soap.rs
parco-xml/src/: lib.rs  xml.rs
parco-xml/src/dexml/: append_path.rs  attr.rs  impls.rs  mod.rs  parse.rs  reader.rs  tag.rs  tag_end.rs  till_open_tag.rs  traits.rs
parco-xml/src/dexml/lex/: ident.rs  lexer.rs  mod.rs  skip.rs  tokens.rs  traits.rs  xmlstr.rs
parco-xml/src/xml/: mod.rs  traits.rs
