[package]
name = "parco-xml-macros"
version = "0.1.8"
edition = "2024"
readme = "../README.md"
license = "MIT"
keywords = ["parco", "xml"]
description = "Parco XML Macros"
homepage = "https://github.com/williamcparks/parco-xml"
repository = "https://github.com/williamcparks/parco-xml"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
