[package]
name = "parco-xml"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT"
keywords = ["parco", "xml"]
description = "Parco XML"
homepage = "https://github.com/williamcparks/parco-xml"
repository = "https://github.com/williamcparks/parco-xml"

[features]

[dependencies]
parco-xml-macros = { version = "0.1.0", path = "../parco-xml-macros" }
thiserror = "2.0.17"
